--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sahibj.moviebuffs.MainActivity">
+    tools:context="com.example.sahibj.moviebuffs.activities.MainActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/movies"
