--- a/app/src/main/res/menu/drawer_actions.xml
+++ b/app/src/main/res/menu/drawer_actions.xml
@@ -1,10 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/list_navigation_menu_item"
+        android:id="@+id/pop_movies_nav_menu_item"
+        android:icon="@drawable/ic_movie_black_24dp"
         android:title="Popular Movies" />
-    <!--<item-->
-        <!--android:id="@+id/statistics_navigation_menu_item"-->
-        <!--android:icon="@drawable/ic_statistics"-->
-        <!--android:title="@string/statistics_title" />-->
 </menu>
