--- a/app/src/main/res/layout/popular_movies_fragment.xml
+++ b/app/src/main/res/layout/popular_movies_fragment.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.example.sahibj.moviebuffs.viewmodels.PopMoviesViewModel" />
+    </data>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/movies"
         android:layout_width="match_parent"
