--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,24 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.sahibj.moviebuffs.activities.MovieDetailActivity">
 
-    <data>
-
-        <variable
-            name="movieDetail"
-            type="com.example.sahibj.moviebuffs.models.MovieDetailsResponse" />
-    </data>
-
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.example.sahibj.moviebuffs.activities.MovieDetailActivity">
+        android:layout_height="?attr/actionBarSize" />
 
-        <TextView
-            android:text="@{movieDetail.originalTitle}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </android.support.constraint.ConstraintLayout>
-</layout>
+    <FrameLayout
+        android:id="@+id/contentFrame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</FrameLayout>
