--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -103,5 +103,13 @@
             app:layout_constraintTop_toBottomOf="@+id/movie_poster"
             tools:text="This is the overview" />
 
+        <FrameLayout
+            android:id="@+id/similar_movie_container"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/overview" />
+
     </android.support.constraint.ConstraintLayout>
 </layout>
