--- a/app/src/main/res/layout/similar_movie_fragment.xml
+++ b/app/src/main/res/layout/similar_movie_fragment.xml
@@ -29,7 +29,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/similar_movies"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:visibility="@{viewModel.dataLoading? View.GONE : View.VISIBLE}"
