--- a/app/src/main/res/layout/alt_movie_item.xml
+++ b/app/src/main/res/layout/alt_movie_item.xml
@@ -9,7 +9,7 @@
     </data>
 
     <ImageView
-        android:id="@+id/similar_movie_poster"
+        android:id="@+id/alt_movie_poster"
         android:layout_width="wrap_content"
         android:layout_height="150dp"
         android:layout_marginRight="16dp" />
