changing background of separators

--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -110,10 +110,13 @@
             <TextView
                 android:id="@+id/similar_movie_label"
                 style="@style/TextAppearance.AppCompat.Medium"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:background="@color/darkGray"
+                android:paddingBottom="4dp"
+                android:paddingLeft="16dp"
+                android:paddingTop="4dp"
                 android:text="Similar Movies"
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toStartOf="parent"
@@ -135,10 +138,13 @@
             <TextView
                 android:id="@+id/recommendations_movie_label"
                 style="@style/TextAppearance.AppCompat.Medium"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
+                android:background="@color/darkGray"
+                android:paddingBottom="4dp"
+                android:paddingLeft="16dp"
+                android:paddingTop="4dp"
                 android:text="Recommended Movies"
                 android:textColor="@android:color/white"
                 app:layout_constraintHorizontal_bias="0.0"
