--- a/app/src/main/res/layout/fragment_cast.xml
+++ b/app/src/main/res/layout/fragment_cast.xml
@@ -3,6 +3,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.example.sahibj.moviebuffs.viewmodels.MovieCastViewModel" />
@@ -11,5 +13,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/cast_recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:visibility="@{viewModel.showCast ? View.VISIBLE : View.GONE}" />
 </layout>
