--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -92,19 +92,34 @@
                 tools:text="21-01-2017" />
 
             <TextView
+                android:id="@+id/overview_label"
+                style="@style/TextAppearance.AppCompat.Medium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@color/darkGray"
+                android:paddingBottom="4dp"
+                android:paddingLeft="16dp"
+                android:paddingTop="4dp"
+                android:text="Overview"
+                android:textColor="@android:color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/movie_poster" />
+
+            <TextView
                 android:id="@+id/overview"
                 style="@style/TextAppearance.AppCompat.Medium"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="8dp"
                 android:text="@{viewModel.overview}"
                 android:textColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movie_poster"
+                app:layout_constraintTop_toBottomOf="@+id/overview_label"
                 tools:text="This is the overview" />
 
             <TextView
@@ -122,6 +137,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/overview" />
 
+            <FrameLayout
+                android:id="@+id/movie_cast_container"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cast_label"
+                tools:background="@color/colorAccent"
+                tools:layout_height="200dp"
+                tools:layout_width="200dp" />
+
             <TextView
                 android:id="@+id/similar_movie_label"
                 style="@style/TextAppearance.AppCompat.Medium"
@@ -135,7 +163,7 @@
                 android:text="Similar Movies"
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cast_label" />
+                app:layout_constraintTop_toBottomOf="@+id/movie_cast_container" />
 
             <FrameLayout
                 android:id="@+id/similar_movie_container"
