--- a/app/src/main/res/layout/fragment_movies_main.xml
+++ b/app/src/main/res/layout/fragment_movies_main.xml
@@ -9,14 +9,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?colorPrimary"
         android:orientation="vertical">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tablayout"
             style="@style/MyCustomTabLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabMode="scrollable" />
+            android:layout_height="wrap_content" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/movie_view_pager"
