--- a/app/src/main/res/layout/fragment_cast.xml
+++ b/app/src/main/res/layout/fragment_cast.xml
@@ -10,10 +10,30 @@
             type="com.example.sahibj.moviebuffs.viewmodels.MovieCastViewModel" />
     </data>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/cast_recycler"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:visibility="@{viewModel.showCast ? View.VISIBLE : View.GONE}" />
+        android:background="?colorPrimary"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/similar_movie_label"
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@color/darkGray"
+            android:paddingBottom="4dp"
+            android:paddingLeft="16dp"
+            android:paddingTop="4dp"
+            android:text="Cast"
+            android:textColor="@android:color/white" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/cast_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:visibility="@{viewModel.showCast ? View.VISIBLE : View.GONE}" />
+    </LinearLayout>
 </layout>
