--- a/app/src/main/res/layout/horizontal_rv_fragment.xml
+++ b/app/src/main/res/layout/horizontal_rv_fragment.xml
@@ -12,13 +12,33 @@
             type="com.example.sahibj.moviebuffs.viewmodels.HorizontalRVViewModel" />
     </data>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/alt_movies"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="@android:color/black"
-        android:visibility="@{viewModel.dataLoading? View.GONE : View.VISIBLE}"
-        tools:listitem="@layout/alt_movie_item" />
+        android:background="?colorPrimary"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/similar_movie_label"
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@color/darkGray"
+            android:paddingBottom="4dp"
+            android:paddingLeft="16dp"
+            android:paddingTop="4dp"
+            android:text="@{viewModel.label}"
+            android:textColor="@android:color/white" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/alt_movies"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/black"
+            android:visibility="@{viewModel.dataLoading? View.GONE : View.VISIBLE}"
+            tools:listitem="@layout/alt_movie_item" />
+
+    </LinearLayout>
 </layout>
