--- a/app/src/main/res/layout/cast_item.xml
+++ b/app/src/main/res/layout/cast_item.xml
@@ -13,11 +13,11 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="16dp">
+        android:layout_marginRight="8dp">
 
         <ImageView
             android:id="@+id/cast_person_image"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="150dp"
             tools:background="@color/darkGray"
             tools:layout_width="120dp" />
